--- a/p2os_urdf/CMakeLists.txt
+++ b/p2os_urdf/CMakeLists.txt
@@ -1,4 +1,15 @@
-cmake_minimum_required(VERSION 2.4.6)
+# http://ros.org/doc/groovy/api/catkin/html/user_guide/supposed.html
+cmake_minimum_required(VERSION 2.8.3)
+project(p2os_urdf)
+# Load catkin and all dependencies required for this package
+# TODO: remove all from COMPONENTS that are not catkin packages.
+find_package(catkin REQUIRED COMPONENTS message_generation geometry_msgs std_msgs robot_state_publisher urdf)
+
+# include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
+# CATKIN_MIGRATION: removed during catkin migration
+# cmake_minimum_required(VERSION 2.4.6)
+
+# CATKIN_MIGRATION: removed during catkin migration
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 # Set the build type.  Options are:
@@ -9,7 +20,9 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
-rosbuild_init()
+
+# CATKIN_MIGRATION: removed during catkin migration
+# rosbuild_init()
 
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -17,15 +30,52 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 #uncomment if you have defined messages
-#rosbuild_genmsg()
+#add_message_files(
+#  FILES
+  # TODO: List your msg files here
+#)
 #uncomment if you have defined services
-#rosbuild_gensrv()
+#add_service_files(
+ # FILES
+  # TODO: List your msg files here
+#)
 
 #common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
+#add_library(${PROJECT_NAME} src/example.cpp)
 #target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
+#
+# CATKIN_MIGRATION: removed during catkin migration
+# rosbuild_add_boost_directories()
+#find_package(Boost REQUIRED COMPONENTS thread)
+include_directories(${catkin_INCLUDE_DIRS})
 #target_link_libraries(example ${PROJECT_NAME})
+## Generate added messages and services with any dependencies listed here
+generate_messages(
+  DEPENDENCIES 
+  geometry_msgs 
+  sensor_msgs
+  std_msgs
+)
+# TODO: fill in what other packages will need to use this package
+## DEPENDS: system dependencies of this project that dependent projects also need
+## CATKIN_DEPENDS: catkin_packages dependent projects also need
+## INCLUDE_DIRS: 
+## LIBRARIES: libraries you create in this project that dependent projects also need
+catkin_package(
+    # DEPENDS roscpp joy geometry_msgs
+    CATKIN_DEPENDS message_runtime robot_state_publisher xacro urdf geometry_msgs sensor_msgs
+    INCLUDE_DIRS 
+    LIBRARIES lib
+)
 
-rosbuild_add_executable(publisher src/publisher.cc)
+add_executable(p2os_urdf src/publisher.cc)
+target_link_libraries(p2os_urdf ${catkin_LIBRARIES})
 
+install(TARGETS p2os_urdf
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY 
+   launch
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+ )
