Added forgotten dependencies

--- a/p2os_driver/CMakeLists.txt
+++ b/p2os_driver/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(p2os_driver)
 
-find_package(catkin REQUIRED COMPONENTS nav_msgs message_generation roscpp geometry_msgs tf std_msgs)
+find_package(catkin REQUIRED COMPONENTS diagnostic_updater nav_msgs message_generation roscpp geometry_msgs tf std_msgs)
 
 #######################################
 ## Declare ROS messages and services ##
@@ -39,7 +39,7 @@ generate_messages(
 catkin_package(
    INCLUDE_DIRS include
 #  LIBRARIES p2os_driver
-   CATKIN_DEPENDS message_runtime nav_msgs roscpp geometry_msgs tf std_msgs
+   CATKIN_DEPENDS message_runtime nav_msgs roscpp geometry_msgs diagnostic_updater tf std_msgs
 #  DEPENDS system_lib
 )
 
