--- a/p2os_driver/package.xml
+++ b/p2os_driver/package.xml
@@ -29,6 +29,8 @@
   <build_depend>tf</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>diagnostic_updater</build_depend>
+  <run_depend>diagnostic_updater</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>roscpp</run_depend>
