--- a/p2os_driver/package.xml
+++ b/p2os_driver/package.xml
@@ -6,7 +6,7 @@
 
   <license>BSD</license>
 
-  <url type="website">http://ros.org/wiki/p2os</url>
+  <url type="website">http://ros.org/wiki/p2os_driver</url>
   <url type="bugtracker">https://github.com/allenh1/p2os/issues/</url>
   <url type="repository">https://github.com/allenh1/p2os/</url>  
 
@@ -27,7 +27,6 @@
 
   <build_depend>std_msgs</build_depend>
   <build_depend>p2os_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>roscpp</build_depend>
@@ -40,7 +39,6 @@
   <run_depend>tf</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
 
 </package>
