Updated change logs.

--- a/p2os_driver/package.xml
+++ b/p2os_driver/package.xml
@@ -10,9 +10,9 @@
   <url type="bugtracker">https://github.com/allenh1/p2os/issues/</url>
   <url type="repository">https://github.com/allenh1/p2os/</url>  
 
-  <maintainer email="hunter.allen@vanderbilt.edu">Hunter Allen</maintainer>
+  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>
 
-  <author email="hunter.allen@Vanderbilt.edu">Hunter Allen</author>
+  <author email="allen286@purdue.edu">Hunter Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author email="asynodin@mech.upatras.gr">Aris Synodinos</author>
   <author>Brian Gerkey</author>
