--- a/p2os_teleop/package.xml
+++ b/p2os_teleop/package.xml
@@ -4,12 +4,12 @@
   <description>A teleoperation node for the p2os_driver package.</description>
   <license>BSD</license>
 
-  <url type="website">http://ros.org/wiki/p2os-vanderbilt</url>
+  <url type="website">http://ros.org/wiki/p2os-purdue</url>
   <url type="bugtracker">https://github.com/allenh1/p2os/issues</url>
 
-  <maintainer email="hunter.allen@vanderbilt.edu">Hunter Allen</maintainer>
+  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>
 
-  <author email="hunter.allen@Vanderbilt.edu">Hunter Allen</author>
+  <author email="allen286@purdue.edu">Hunter Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author>Brian Gerkey</author>
   <author>Kasper Stoy</author>
