--- a/p2os_msgs/package.xml
+++ b/p2os_msgs/package.xml
@@ -7,7 +7,7 @@
     p2os_driver package and the ROS infrastructure.
   </description>
 
-  <maintainer email="hunter.allen@vanderbilt.edu">Hunter Allen</maintainer>
+  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>
 
   <license>BSD</license>
 
@@ -16,7 +16,7 @@
   <url type="repository">https://github.com/allenh1/p2os/</url>
 
   
-  <author email="hunter.allen@Vanderbilt.edu">Hunter Allen</author>
+  <author email="allen286@purdue.edu">Hunter Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author email="asynodin@mech.upatras.gr">Aris Synodinos</author>
   <author>Brian Gerkey</author>
