Forgot to update my email on p2os_doc's package.xml file. Oops. It's better now.

--- a/p2os_doc/package.xml
+++ b/p2os_doc/package.xml
@@ -6,7 +6,7 @@
     Contains the Documentation for the p2os driver/componenets
   </description>
 
-  <maintainer email="hunter.allen@vanderbilt.edu">Hunter Allen</maintainer>
+  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>
 
   <license>BSD</license>
 
