--- a/p2os_urdf/package.xml
+++ b/p2os_urdf/package.xml
@@ -27,9 +27,9 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>robot_state_publisher</build_depend>
+  <build_depend>tf</build_depend>
   <run_depend>sensor_msgs</run_depend>
-  <run_depend>robot_state_publisher</run_depend>
+  <run_depend>tf</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>urdf</run_depend>
