--- a/p2os_driver/package.xml
+++ b/p2os_driver/package.xml
@@ -32,6 +32,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>diagnostic_updater</build_depend>
+  <build_depend>kdl_parser</build_depend>
 
   <run_depend>diagnostic_updater</run_depend>
   <run_depend>p2os_msgs</run_depend>
@@ -40,5 +41,5 @@
   <run_depend>roscpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
-
+  <run_depend>kdl_parser</run_depend>
 </package>
