--- a/p2os_urdf/CMakeLists.txt
+++ b/p2os_urdf/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(p2os_urdf)
 
-find_package(catkin REQUIRED COMPONENTS geometry_msgs sensor_msgs std_msgs tf urdf)
+find_package(catkin REQUIRED COMPONENTS geometry_msgs sensor_msgs std_msgs tf urdf kdl_parser)
 
 catkin_package(
-    CATKIN_DEPENDS tf urdf geometry_msgs sensor_msgs std_msgs
+    CATKIN_DEPENDS tf urdf geometry_msgs sensor_msgs std_msgs kdl_parser
 )
 
 include_directories(
