--- a/p2os_urdf/package.xml
+++ b/p2os_urdf/package.xml
@@ -28,12 +28,13 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>kdl_parser</build_depend>
+
   <run_depend>sensor_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>urdf</run_depend>
-
   <run_depend>std_msgs</run_depend>
-
+  <run_depend>kdl_parser</run_depend>
 </package>
