--- a/p2os_doc/package.xml
+++ b/p2os_doc/package.xml
@@ -15,7 +15,7 @@
   <url type="repository">https://github.com/allenh1/p2os/</url>
 
   
-  <author email="hunter.allen@Vanderbilt.edu">Hunter Allen</author>
+  <author email="allen286@purdue.edu">Hunter Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author email="asynodin@mech.upatras.gr">Aris Synodinos</author>
   <author>Brian Gerkey</author>
