Updated package metadata, as well as added the correct c++ flags to the urdf file (for Gentoo support).

--- a/p2os_doc/package.xml
+++ b/p2os_doc/package.xml
@@ -6,16 +6,16 @@
     Contains the Documentation for the p2os driver/componenets
   </description>
 
-  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>
+  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
 
   <license>BSD</license>
 
-  <url type="website">http://ros.org/wiki/p2os_msgs</url>
+  <url type="website">http://ros.org/wiki/p2os-purdue</url>
   <url type="bugtracker">https://github.com/allenh1/p2os/issues/</url>
   <url type="repository">https://github.com/allenh1/p2os/</url>
 
   
-  <author email="allen286@purdue.edu">Hunter Allen</author>
+  <author email="hunter@openrobotics.org">Hunter L. Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author email="asynodin@mech.upatras.gr">Aris Synodinos</author>
   <author>Brian Gerkey</author>
