--- a/p2os_teleop/package.xml
+++ b/p2os_teleop/package.xml
@@ -7,9 +7,9 @@
   <url type="website">http://ros.org/wiki/p2os-purdue</url>
   <url type="bugtracker">https://github.com/allenh1/p2os/issues</url>
 
-  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>
+  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
 
-  <author email="allen286@purdue.edu">Hunter Allen</author>
+  <author email="hunter@openrobotics.org">Hunter L. Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author>Brian Gerkey</author>
   <author>Kasper Stoy</author>
