--- a/p2os_urdf/package.xml
+++ b/p2os_urdf/package.xml
@@ -2,16 +2,14 @@
   <name>p2os_urdf</name>
   <version>2.0.5</version>
   <description>URDF file descriptions for P2OS/ARCOS robot</description>
-  <!-- <maintainer>Edward</maintainer> -->
 
   <license>BSD</license>
 
   <url type="website">http://ros.org/wiki/p2os-purdue</url>
-  <!-- <url type="bugtracker"></url> -->
 
-  <maintainer email="allen286@purdue.edu">Hunter Allen</maintainer>
+  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
 
-  <author email="allen286@purdue.edu">Hunter Allen</author>
+  <author email="hunter@openrobotics.org">Hunter L. Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author>Brian Gerkey</author>
   <author>Kasper Stoy</author>
