--- a/p2os_launch/package.xml
+++ b/p2os_launch/package.xml
@@ -1,4 +1,6 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://wwww.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>p2os_launch</name>
   <version>2.0.7</version>
   <description>Launch and config files designed for use with the p2os stack.</description>
@@ -20,5 +22,9 @@
   <author>MobileRobots Inc.</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  
+
+  <exec_depend>p2os_driver</exec_depend>
+  <exec_depend>p2os_msgs</exec_depend>
+  <exec_depend>p2os_urdf</exec_depend>
+  <exec_depend>p2os_teleop</exec_depend>
 </package>
