--- a/p2os_teleop/package.xml
+++ b/p2os_teleop/package.xml
@@ -1,4 +1,6 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>p2os_teleop</name>
   <version>2.0.7</version>
   <description>A teleoperation node for the p2os_driver package.</description>
@@ -6,6 +8,7 @@
 
   <url type="website">http://ros.org/wiki/p2os-purdue</url>
   <url type="bugtracker">https://github.com/allenh1/p2os/issues</url>
+  <url type="repository">https://github.com/allenh1/p2os/</url>
 
   <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
 
@@ -20,13 +23,11 @@
   <author>MobileRobots Inc.</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>std_msgs</run_depend>
 
+  <depend>sensor_msgs</depend>
+  <depend>tf</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+
+  <exec_depend>message_runtime</exec_depend>
 </package>
