Update package.xml to version 2.

--- a/p2os_doc/package.xml
+++ b/p2os_doc/package.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<package>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>p2os_doc</name>
   <version>2.0.7</version>
   <description>
