--- a/p2os_msgs/package.xml
+++ b/p2os_msgs/package.xml
@@ -28,10 +28,12 @@
   <author>ActivMedia Robotics LLC</author>
   <author>MobileRobots Inc.</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generator</buildtool_depend>
 
-  <depend>message_generation</depend>
-  <depend>std_msgs</depend>
+  <build_depend>std_msgs</build_depend>
 
-  <exec_depend>message_runtime</exec_depend>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
