--- a/p2os_driver/CMakeLists.txt
+++ b/p2os_driver/CMakeLists.txt
@@ -1,30 +1,36 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(p2os_driver)
 
-find_package(catkin REQUIRED COMPONENTS
-  p2os_msgs
-  diagnostic_updater
-  nav_msgs
-  roscpp
-  geometry_msgs
-  tf
-  std_msgs
-  kdl_parser
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra)
+endif()
+
+find_package(ament_cmake_auto REQUIRED)
+find_package(ament_cmake_ros REQUIRED)
+
+set(req_deps
+  "p2os_msgs"
+  "std_msgs"
+  "nav_msgs"
+  "rclcpp"
+  "rcutils"
+  "geometry_msgs"
+  "tf2"
+  "tf2_ros"
+  "tf2_msgs"
+  "tf2_geometry_msgs"
 )
 
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES p2os_driver
-  CATKIN_DEPENDS p2os_msgs nav_msgs roscpp geometry_msgs diagnostic_updater tf std_msgs kdl_parser
-)
+ament_auto_find_build_dependencies(REQUIRED ${req_deps})
 
-## Specify additional locations of header files
-include_directories(include
-  ${catkin_INCLUDE_DIRS}
-)
+INCLUDE_DIRECTORIES(include)
 
 ## Declare a cpp executable
-add_executable(p2os_driver
+ament_auto_add_executable(p2os_driver
   src/p2osnode.cc
   src/p2os.cc
   src/kinecalc.cc
@@ -33,11 +39,12 @@ add_executable(p2os_driver
   src/sip.cc
   src/p2os_ptz.cpp
 )
-
-target_link_libraries(p2os_driver ${catkin_LIBRARIES})
-add_dependencies(p2os_driver p2os_msgs_gencpp)
+ament_target_dependencies(p2os_driver ${req_deps})
 
 ## Mark executables and/or libraries for installation
-install(TARGETS p2os_driver
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+install(
+  TARGETS p2os_driver
+  DESTINATION lib/${PROJECT_NAME}
 )
+
+ament_auto_package()
