Update email address

--- a/p2os_msgs/package.xml
+++ b/p2os_msgs/package.xml
@@ -8,7 +8,7 @@
     p2os_driver package and the ROS infrastructure.
   </description>
 
-  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
+  <maintainer email="hallen@kns.com">Hunter L. Allen</maintainer>
 
   <license>BSD</license>
 
@@ -17,7 +17,7 @@
   <url type="repository">https://github.com/allenh1/p2os/</url>
 
   
-  <author email="hunter@openrobotics.org">Hunter L. Allen</author>
+  <author email="hallen@kns.com">Hunter L. Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author email="asynodin@mech.upatras.gr">Aris Synodinos</author>
   <author>Brian Gerkey</author>
