--- a/p2os_launch/package.xml
+++ b/p2os_launch/package.xml
@@ -9,9 +9,9 @@
 
   <url type="website">http://ros.org/wiki/p2os-purdue</url>
 
-  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
+  <maintainer email="hallen@kns.com">Hunter L. Allen</maintainer>
 
-  <author email="hunter@openrobotics.org">Hunter L. Allen</author>
+  <author email="hallen@kns.com">Hunter L. Allen</author>
   <author email="dfseifer@usc.edu">David Feil-Seifer</author>
   <author>Brian Gerkey</author>
   <author>Kasper Stoy</author>
